# gym_mobile_api

./: .gitignore  .pre-commit-config.yaml  README.md  db.db  mypy.ini  pre-commit-config.yaml  pyproject.toml  pystest.ini
gym_project/: app.py
gym_project/api/auth/: models.py  repository.py  routes.py  service.py
gym_project/api/employee/: models.py  repository.py  routes.py  service.py
gym_project/api/financial/: mapper.py  models.py  repository.py  routes.py  service.py
gym_project/api/infra/: db_connection.py
gym_project/api/routers/v0/: app_v0.py
gym_project/api/users/: models.py  repository.py  routes.py  service.py
gym_project/infra/Entities/: entities.py
gym_project/utils/: auth_utils.py  auth_utils_poc.py  erros_util.py  settings.py
tests/auth/: test_auth_endpoints.py
tests/employee/: test_employee_endpoints.py
tests/users/: test_users_endpoints.py
