[tool.poetry]
name = "gym-project"
version = "0.1.0"
description = ""
authors = ["Christian Lopes <christian.lima@ntendencia.com.br>"]
readme = "README.md"
packages = [{include = "gym_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
sqlalchemy = "^2.0.12"
asyncpg = "^0.27.0"
sqlalchemy2-stubs = "^0.0.2a34"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pre-commit = "^3.3.1"
pytest-random-order = "^1.1.0"
pytest-cov = "^4.0.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
